Added Mysql and fixed relations, count